refactor: minor java21 refactoring using IDEA suggestions for qsv tests