@@ -6,6 +6,7 @@ import static org.junit.Assert.assertTrue;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.FileSystems;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.CountDownLatch;
@@ -20,14 +21,12 @@ import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
 import org.qcmg.qsv.QSVParameters;
-import org.qcmg.qsv.discordantpair.FindMatePairsMT;
-import org.qcmg.qsv.discordantpair.PairClassification;
 import org.qcmg.qsv.util.TestUtil;
 
 public class FindMatePairsMTTest {
 
     
-    private static final String FILE_SEPERATOR = System.getProperty("file.separator");
+    private static final String FILE_SEPARATOR = FileSystems.getDefault().getSeparator();
     private FindMatePairsMT findMatePairs = null;
     private final CountDownLatch countDownLatch = new CountDownLatch(1);
     private List<SAMRecord> records = new ArrayList<SAMRecord>();
@@ -42,7 +41,7 @@ public class FindMatePairsMTTest {
         File normalBam = TestUtil.createSamFile(testFolder.newFile("normal.sam").getAbsolutePath(), SortOrder.queryname, false);
 
         QSVParameters p = TestUtil.getQSVParameters(testFolder.getRoot(), normalBam.getAbsolutePath(), tumorBam.getAbsolutePath(), true, "none", "pair");
-        matePairDir = testFolder.getRoot().getAbsolutePath() + FILE_SEPERATOR + "matepair" + FILE_SEPERATOR;        
+        matePairDir = testFolder.getRoot().getAbsolutePath() + FILE_SEPARATOR + "matepair" + FILE_SEPARATOR;
         
         findMatePairs = new FindMatePairsMT(Thread.currentThread(), countDownLatch, p, new AtomicInteger(), "test", matePairDir, true);
 
@@ -62,8 +61,8 @@ public class FindMatePairsMTTest {
         findMatePairs.setUpPairingClassificationWriters();
         assertEquals(12, findMatePairs.getMatePairWritersMap().size());
 
-        assertEquals(testFolder.getRoot().toString() + FILE_SEPERATOR + "matepair" + FILE_SEPERATOR + "AAC" 
-        + FILE_SEPERATOR, findMatePairs.getMatePairWritersMap().get(PairClassification.AAC).getDirToWrite());
+        assertEquals(testFolder.getRoot().toString() + FILE_SEPARATOR + "matepair" + FILE_SEPARATOR + "AAC"
+        + FILE_SEPARATOR, findMatePairs.getMatePairWritersMap().get(PairClassification.AAC).getDirToWrite());
         assertEquals("_test_AAC", findMatePairs.getMatePairWritersMap().get(PairClassification.AAC).getFileName());
     }
 
@@ -85,7 +84,7 @@ public class FindMatePairsMTTest {
     
     @Test
     public void passesZPFilter() {
-    	 	SAMRecord record1 = records.get(0);
+    	 	SAMRecord record1 = records.getFirst();
     	 	assertEquals(true, FindMatePairsMT.passesZPFilter(record1));
     	 	record1.setAttribute("ZP", "Z**");
     	 	assertEquals(false, FindMatePairsMT.passesZPFilter(record1));
@@ -111,22 +110,22 @@ public class FindMatePairsMTTest {
         assertFalse(findMatePairs.passesMateFiltering(record));
         
         // Mate Reference name not chromosome
-        SAMRecord record1 = records.get(0);
+        SAMRecord record1 = records.getFirst();
 		record.setMateReferenceName("GPL001");
 		assertFalse(findMatePairs.passesMateFiltering(record1));
         
 		//Mate unmapped
-        SAMRecord record2 = records.get(0);
+        SAMRecord record2 = records.getFirst();
 		record.setMateUnmappedFlag(true);
 		assertFalse(findMatePairs.passesMateFiltering(record2));        
         
         // Reference name is chrMT
-		SAMRecord record3 = records.get(0);
+		SAMRecord record3 = records.getFirst();
 		record.setReferenceName("chrMT");
 		assertFalse(findMatePairs.passesMateFiltering(record3));
         
         // ZP contains X
-		SAMRecord record4 = records.get(0);
+		SAMRecord record4 = records.getFirst();
 		record.setAttribute("ZP", "AXB");
 		assertFalse(findMatePairs.passesMateFiltering(record4));
     }
