@@ -5,6 +5,7 @@ import static org.junit.Assert.assertTrue;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.FileSystems;
 import java.util.List;
 
 import org.junit.After;
@@ -19,7 +20,7 @@ public class MatePairsWriterTest {
     private MatePairsWriter writer;
     private File mateDir;
     private List<MatePair> matePairs;
-    private static final String FILE_SEPERATOR = System.getProperty("file.separator");
+    private static final String FILE_SEPARATOR = FileSystems.getDefault().getSeparator();
 
     @Rule
     public TemporaryFolder testFolder = new TemporaryFolder();
@@ -28,7 +29,7 @@ public class MatePairsWriterTest {
     public void setUp() throws Exception {
         mateDir = testFolder.newFolder(PairClassification.AAC + "" );  
         
-        writer = new MatePairsWriter(PairClassification.AAC, testFolder.getRoot().toString()+FILE_SEPERATOR, "TD", "lmp");
+        writer = new MatePairsWriter(PairClassification.AAC, testFolder.getRoot().toString()+ FILE_SEPARATOR, "TD", "lmp");
         matePairs = TestUtil.setupMatePairs( PairGroup.AAC);
     }
 
@@ -40,13 +41,13 @@ public class MatePairsWriterTest {
     @Test
     public void testAddNewMatePair() {
         assertEquals(0, writer.getMatePairs().size());
-        writer.addNewMatePair(matePairs.get(0));
+        writer.addNewMatePair(matePairs.getFirst());
         assertEquals(1, writer.getMatePairs().size());
     }
 
     @Test
     public void testWriteMatePairsToFile() throws IOException {
-        writer.addNewMatePair(matePairs.get(0));
+        writer.addNewMatePair(matePairs.getFirst());
         writer.writeMatePairsToFile();
         File file = new File(mateDir, "chr7-1_TD_AAC");
         assertTrue(file.exists());
